<resources>
    <string name="app_name">BudgetApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="graph">Graph</string>
    <string name="profile">Profile</string>
    <string name="transactions">Transactions</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="contents">Contents</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="total_spend">Total spend:</string>
    <string name="spend">Spend</string>
    <string name="total_stats_by_category">Total stats by category</string>
    <string name="stats_by_date">Stats by date</string>
    <string name="stats_by_specific_category">Stats by specific category</string>
    <string name="total_spend_by">Total spend by</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out!</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="register">Register</string>
    <string name="statistics">Statistics</string>
    <string name="add_transaction">Add transaction</string>
    <string name="registration">Registration</string>
    <string name="select_category">Select category:</string>

    <string-array name="categories">
        <item>Social life</item>
        <item>Food</item>
        <item>Self development</item>
        <item>Transportation</item>
        <item>Health</item>
        <item>Beauty</item>
        <item>Education</item>
        <item>Household</item>
        <item>Other</item>
    </string-array>
</resources>
