<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.budgetapp.viewmodels.StatsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTotalStatsGraph"
            android:text="@string/total_stats_by_category"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:onClick="@{(v) -> viewModel.onClick(v)}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStatsByDate"
            android:text="@string/stats_by_date"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:onClick="@{(v) -> viewModel.onClick(v)}"
            app:layout_constraintTop_toBottomOf="@+id/btnTotalStatsGraph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStatsBySpecificCategory"
            android:text="@string/stats_by_specific_category"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:onClick="@{(v) -> viewModel.onClick(v)}"
            app:layout_constraintTop_toBottomOf="@+id/btnStatsByDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>