<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.budgetapp.viewmodels.TransactionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AddTransactionFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            style="@style/InputTil"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                style="@style/InputEditText"
                android:drawableStart="@drawable/ic_date_range_24"
                android:drawablePadding="16dp"
                android:focusable="false"
                android:hint="@string/date"
                android:text="@={viewModel.dateLiveData}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            style="@style/InputTil"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilDate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAmount"
                style="@style/InputEditText"
                android:hint ="@string/amount"
                android:text="@={viewModel.amountLiveData}"
                android:drawableStart="@drawable/ic_money_24"
                android:drawablePadding="@dimen/size16"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="@dimen/size10"
            android:src="@drawable/ic_category_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAmount" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:theme="@style/SpinnerTheme"
            android:layout_marginStart="16dp"
            android:prompt="@string/category"
            items="@{viewModel.categoriesLiveData}"
            onItemSelected="@{viewModel.onCategorySelected}"
            app:layout_constraintTop_toTopOf="@+id/ivCategory"
            app:layout_constraintBottom_toBottomOf="@+id/ivCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivCategory" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContents"
            style="@style/InputTil"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spCategories">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContents"
                style="@style/InputEditText"
                android:hint ="@string/contents"
                android:text="@={viewModel.contentsLiveData}"
                android:drawableStart="@drawable/ic_title_24"
                android:drawablePadding="@dimen/size16"
                android:inputType="textAutoComplete"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            style="@style/blueButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/size16"
            android:onClick="@{(v) -> viewModel.onClick(v)}"
            android:text="@string/save" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>