<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.budgetapp.viewmodels.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.LoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/blueTitle"
            android:text="@string/login"
            android:layout_margin="@dimen/size16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/InputTil"
            android:layout_margin="@dimen/size16"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilPassword"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/InputEditText"
                android:id="@+id/etEmail"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email_24"
                android:drawablePadding="@dimen/size16"
                android:inputType="textEmailAddress|textNoSuggestions" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/InputTil"
            android:layout_margin="@dimen/size16"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/InputEditText"
                android:id="@+id/etPassword"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_lock_24"
                android:drawablePadding="@dimen/size16"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegister"
            android:text="@string/don_t_have_account_yet"
            android:textColor="@android:color/holo_blue_dark"
            android:onClick="@{(v) -> viewModel.onClick(v)}"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:layout_constraintStart_toStartOf="@id/tilPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/blueButton"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_margin="@dimen/size16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>