<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.budgetapp.viewmodels.TransactionsViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.TransactionsFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add_24"
            android:layout_margin="16dp"
            android:onClick="@{(v) -> viewModel.onClick(v)}"/>

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:weightSum="4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDate"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/date"
                tools:text="12/04/2020" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContents"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/contents"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCategory"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/category" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSpend"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/spend" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListOfTransactions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:items="@{viewModel.filteredData}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/llHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalSpendTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/total_spend"
            app:layout_constraintEnd_toStartOf="@id/tvTotalSpend"
            app:layout_constraintTop_toBottomOf="@+id/rvListOfTransactions" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalSpend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            tools:text="1523.3 kn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTotalSpendTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvTotalSpendTitle" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>